--- a/04_regression.ipynb
+++ b/04_regression.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ed6301c7-a9c6-4b7c-80a1-4ec402b756f4",
    "metadata": {
     "scrolled": true
@@ -52,7 +52,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.711\n",
       "Method:                 Least Squares   F-statistic:                 1.231e+04\n",
       "Date:                Mon, 17 Feb 2025   Prob (F-statistic):               0.00\n",
-      "Time:                        11:44:37   Log-Likelihood:                -30280.\n",
+      "Time:                        16:33:25   Log-Likelihood:                -30280.\n",
       "No. Observations:               10000   AIC:                         6.057e+04\n",
       "Df Residuals:                    9997   BIC:                         6.059e+04\n",
       "Df Model:                           2                                         \n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "f73aefaa-88c5-4f1f-91d9-33d4bf930f27",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
       "Model:                          Logit   Df Residuals:                     9997\n",
       "Method:                           MLE   Df Model:                            2\n",
       "Date:                Mon, 17 Feb 2025   Pseudo R-squ.:                  0.2243\n",
-      "Time:                        11:44:30   Log-Likelihood:                -5348.2\n",
+      "Time:                        17:49:51   Log-Likelihood:                -5348.2\n",
       "converged:                       True   LL-Null:                       -6894.4\n",
       "Covariance Type:            nonrobust   LLR p-value:                     0.000\n",
       "==============================================================================\n",
@@ -322,8 +322,8 @@
     "\n",
     "以下の表は、各説明変数の推定結果を示している。\n",
     "\n",
-    "| 変数       | coef    | std err  | t       | P>|t|    | [0.025, 0.975]           |\n",
-    "|————|———|–––––|———|———|–––––––––––––|\n",
+    "| 変数       | coef    | std err  | t       | P>t    | [0.025, 0.975]           |\n",
+    "|---|---|---|---|---|-----|\n",
     "| const      | 19.7749 | 0.183    | 108.029 | 0.000   | 19.416 ～ 20.134          |\n",
     "| treatment  | 10.2499 | 0.100    | 102.514 | 0.000   | 10.054 ～ 10.446          |\n",
     "| age        | 0.5041  | 0.004    | 118.935 | 0.000   | 0.496 ～ 0.512            |\n",
